# csg2csg

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml  setup.py
.circleci/: config.yml
csg2csg/: Card.py  CellCard.py  FLUKACellCard.py  FLUKAInput.py  FLUKAMaterialCard.py  FLUKASurfaceCard.py  GDMLAssembly.py  GDMLInput.py  GDMLMaterialCard.py  GDMLSolid.py  GDMLUtility.py  GDMLVolume.py  Input.py  MCNPCellCard.py  MCNPDataCard.py  MCNPFormatter.py  MCNPInput.py  MCNPMaterialCard.py  MCNPParticleNames.py  MCNPSurfaceCard.py  MaterialCard.py  MaterialData.py  OpenMCCell.py  OpenMCInput.py  OpenMCMaterial.py  OpenMCSurface.py  ParticleNames.py  PhitsInput.py  SCONECellCard.py  SCONEInput.py  SCONEMaterialCard.py  SCONESurfaceCard.py  SCONEUniverseCard.py  SerpentCellCard.py  SerpentInput.py  SerpentMaterialCard.py  SerpentSurfaceCard.py  SurfaceCard.py  UniverseCard.py  Vector.py  (+3 more)
python/: CellCard.py  FLUKACellCard.py  FLUKAInput.py  FLUKAMaterialCard.py  FLUKASurfaceCard.py  GDMLInput.py  Input.py  MCNPCellCard.py  MCNPDataCard.py  MCNPFormatter.py  MCNPInput.py  MCNPMaterialCard.py  MCNPParticleNames.py  MCNPSurfaceCard.py  MaterialCard.py  MaterialData.py  OpenMCCell.py  OpenMCInput.py  OpenMCMaterial.py  OpenMCSurface.py  ParticleNames.py  PhitsInput.py  SerpentCellCard.py  SerpentInput.py  SerpentMaterialCard.py  SerpentSurfaceCard.py  SurfaceCard.py  Vector.py  XMLUtilities.py  csg.py  csg2csg.py  mcnp_tld.mod
src/: CMakeLists.txt  FLUKAExporter.cpp  FLUKAExporter.hpp  InputDeck.cpp  InputDeck.hpp  LineExtractor.cpp  LineExtractor.hpp  (+18 more)
(+44 files in other folders)
